--- a/src/assets/main.scss
+++ b/src/assets/main.scss
@@ -106,6 +106,7 @@ body::-webkit-scrollbar-thumb {
   sm:rounded-2xl
   -mx-4 xxs:-mx-6 xs:-mx-8 md:-mx-0
   shadow-xl
+  overflow-hidden
 }
 
 .fade-leave-active {
