--- a/src/assets/main.scss
+++ b/src/assets/main.scss
@@ -19,6 +19,7 @@ body {
   font-weight: 500;
   background: linear-gradient(180deg, rgba(0,0,0,0) 0%, rgba(17,24,39,1) 25%), url('/sun-tornado.svg') no-repeat top center;
   background-size: 3840px 2160px;
+  @apply dark
 }
 body::-webkit-scrollbar {
   width: 8px
@@ -84,8 +85,7 @@ body::-webkit-scrollbar-thumb {
   hover:bg-opacity-10
   hover:backdrop-blur
   rounded-lg
-  transition-all
-  duration-200
+  transition
   md:block
   hidden
 }
